--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "bootstrap": "^4.1.3",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
-    "nodemon": "^1.18.5",
+    "nodemon": "^1.18.6",
     "popper.js": "^1.14.4",
-    "solr-node": "^1.0.14"
+    "solr-node": "^1.0.14",
+    "spell": "^1.0.0"
   }
 }
