--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autocomplete-js": "^2.7.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "jquery-autocomplete": "^1.2.8",
     "nodemon": "^1.18.6",
     "popper.js": "^1.14.4",
+    "sessionstorage": "^0.1.0",
     "solr-node": "^1.0.14",
     "spell": "^1.0.0"
   }
